# cnn_bridge

./: .gitignore  AUTHORS  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  TODO  package.xml  setup.py
launch/: detection_publisher.launch  segmentation_publisher.launch
msg/: Detection.msg  Netmask.msg  SegmentationClass.msg
srv/: getDetectionMetadata.srv  getSegmentationMetadata.srv
