<?xml version="1.0"?>
<package format="2">
  <name>cnn_bridge</name>
  <version>0.8.5</version>
  <description>The cnn_bridge package take freeze graphs and publishes them as ROS messages</description>

  <maintainer email="ngolombek@gmail.com">Noam C. Golombek</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/cnn_bridge</url>
  <author email="ngolombek@gmail.com">Noam C. Golombek</author>
  <author email="berengolts@gmail.com">Alexander Beringolts</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>python-tensorflow-pip</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-opencv</run_depend>
  <run_depend>roslib</run_depend>
</package>
